Users can now delete their posts on their profile page. bug fix: Long comments now wraps to next line.

--- a/src/components/Comments.css
+++ b/src/components/Comments.css
@@ -87,11 +87,10 @@
   width: 100%;
 }
 
-.text-container > p {
-  display: flex;
-  flex-flow: column wrap;
+.comment-text {
+  word-wrap: break-word;
   padding: 0 0 5px 0;
-  overflow: hidden;
+  max-width: 50vw;
 }
 
 .btn-delete {
